
import javax.swing.*;

public class TablePanelUI {

    public JTable dataTable;
    public JTextField searchField;
    public JButton findBtn;
    public JButton addBtn;
    public JPanel contentPane;

}